# rt-stock-statistics

./: .gitignore  CMakeLists.txt  README.md
cross-compile/: CMakeLists.txt  toolchain.cmake
cross-compile/libroot/include/: lws_config.h
cross-compile/libroot/include/openssl/: configuration.h  opensslv.h
include/: JSONParsing.h  PCQueue.h  SystemHandling.h  ThreadRoutines.h  TradeProcessing.h  WSSHandling.h
session_data/: create_plots.py
session_data/candlesticks/: AAPL.csv  AMD.csv  AMZN.csv  BINANCE:BNBUSDT.csv  BINANCE:BTCUSDT.csv  BINANCE:DOGEUSDT.csv  BINANCE:ETHUSDT.csv  BINANCE:SOLUSDT.csv  BRK.B.csv  GOOGL.csv  INTC.csv  META.csv  MSFT.csv  NIO.csv  NVDA.csv  OANDA:AUD_USD.csv  OANDA:EUR_USD.csv  OANDA:GBP_USD.csv  OANDA:USD_CAD.csv  OANDA:USD_JPY.csv  TSLA.csv
session_data/delays/: calculator.csv
session_data/moving_avg/: AAPL.csv  AMD.csv  AMZN.csv  BINANCE:BNBUSDT.csv  BINANCE:BTCUSDT.csv  BINANCE:DOGEUSDT.csv  BINANCE:ETHUSDT.csv  BINANCE:SOLUSDT.csv  BRK.B.csv  GOOGL.csv  INTC.csv  META.csv  MSFT.csv  NIO.csv  NVDA.csv  OANDA:AUD_USD.csv  OANDA:EUR_USD.csv  OANDA:GBP_USD.csv  OANDA:USD_CAD.csv  OANDA:USD_JPY.csv  TSLA.csv
session_data/trade_logs/: AAPL.csv  AMD.csv  AMZN.csv  BINANCE:BNBUSDT.csv  BRK.B.csv  GOOGL.csv  INTC.csv  META.csv  MSFT.csv  NIO.csv  OANDA:AUD_USD.csv  OANDA:EUR_USD.csv  OANDA:GBP_USD.csv  OANDA:USD_CAD.csv  OANDA:USD_JPY.csv
src/: JSONParsing.c  PCQueue.c  SystemHandling.c  ThreadRoutines.c  TradeProcessing.c  WSSHandling.c  main.c
